avatar changes added, fixed README.md, added deleting messages in all_chat, refactor redis for last 50 messages, delete buttons visible only for admins

--- a/start_all_template/static/css/style.css
+++ b/start_all_template/static/css/style.css
@@ -2087,6 +2087,7 @@ h3 {
 }
 
 .profile-settings__avatar img {
+  background: #222222;
   border-radius: 50%;
   width: 100%;
   height: auto;
